Reuse constructor